--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -44,12 +44,6 @@
 }
 
 
-.row {
-    width: 100%;
-}
-
-.col {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.brand-font {
+    font-family: cursive;
 }
