--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -134,7 +134,7 @@
   width: auto;
   padding: 50px;
   border: 5px white;
-  font-family: "cursive";
+  font-family: "gill sans";
   font-size: 20px;
   font-weight: normal;
 }
@@ -148,3 +148,21 @@
 .card {
   opacity: 0.9;
 }
+
+.w-content {
+  color: #a60734;
+  opacity: 0.9;
+  border-radius: 50px;
+  background-color: white;
+  width: auto;
+  padding: 50px;
+  border: 5px white;
+  font-family: cursive;
+  font-size: 30px;
+  font-weight: bold;
+  word-spacing: 4px;
+ 
+  
+
+}
+
